[package]
name = "simple-physics"
version = "0.2.1"
authors = ["Harikrishnan Balagopal <harikrishmenon@gmail.com>"]
repository = "https://github.com/HarikrishnanBalagopal/simple-physics.git"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
